# pulsar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  metadata.json  offline_metrics.jsonl  pyproject.toml  settings.txt
cache/textures/: Ball_Default00_D.tga  ENVPack.tga  ForcefieldHex.tga
cmake/: Dependencies.cmake
configs/: 2v2_appo.json  2v2_bc.json  2v2_lfpo.json  2v2_offline.json  2v2_ppo.json
cpp/benchmarks/: benchmark_main.cpp
cpp/include/pulsar/checkpoint/: checkpoint.hpp
cpp/include/pulsar/config/: config.hpp
cpp/include/pulsar/core/: parallel_executor.hpp  types.hpp
cpp/include/pulsar/env/: done.hpp  mutators.hpp  obs_builder.hpp  reward.hpp  rocketsim_engine.hpp
cpp/include/pulsar/logging/: wandb_logger.hpp
cpp/include/pulsar/model/: actor_critic.hpp  future_evaluator.hpp  latent_future_actor.hpp  next_goal_predictor.hpp  normalizer.hpp  ppo_actor.hpp
cpp/include/pulsar/rl/: action_table.hpp  interfaces.hpp
cpp/include/pulsar/tracing/: tracing.hpp
cpp/include/pulsar/training/: appo_trainer.hpp  batched_rocketsim_collector.hpp  bc_pretrainer.hpp  cuda_utils.hpp  future_window_builder.hpp  lfpo_math.hpp  lfpo_trainer.hpp  offline_dataset.hpp  offline_pretrainer.hpp  online_ngp_dataset_writer.hpp  online_ngp_replay_buffer.hpp  online_outcome_dataset_writer.hpp  online_outcome_replay_buffer.hpp  ppo_math.hpp  ppo_trainer.hpp  rollout_storage.hpp  self_play_manager.hpp  transition_dataset.hpp
cpp/src/apps/: offline_train_main.cpp  train_main.cpp
cpp/src/checkpoint/: checkpoint.cpp
cpp/src/config/: config.cpp
cpp/src/env/: done.cpp  mutators.cpp  obs_builder.cpp  reward.cpp  rocketsim_engine.cpp
cpp/src/logging/: wandb_logger.cpp
cpp/src/model/: actor_critic.cpp  future_evaluator.cpp  latent_future_actor.cpp  next_goal_predictor.cpp  normalizer.cpp  ppo_actor.cpp
cpp/src/python/: bindings.cpp
cpp/src/rl/: action_table.cpp  interfaces.cpp
cpp/src/tracing/: tracing.cpp
cpp/src/training/: appo_trainer.cpp  batched_rocketsim_collector.cpp  bc_pretrainer.cpp  future_window_builder.cpp  lfpo_math.cpp  lfpo_trainer.cpp  offline_dataset.cpp  offline_pretrainer.cpp  online_ngp_dataset_writer.cpp  online_ngp_replay_buffer.cpp  online_outcome_dataset_writer.cpp  online_outcome_replay_buffer.cpp  ppo_math.cpp  ppo_trainer.cpp  rollout_storage.cpp  self_play_manager.cpp  transition_dataset.cpp
cpp/tests/: test_collector.cpp  test_dataset.cpp  test_env.cpp  test_future_windows.cpp  test_lfpo_math.cpp  test_main.cpp  test_offline.cpp  test_ppo_math.cpp  test_self_play.cpp  test_torch.cpp  test_utils.hpp
docs/: cuda_h100_linux.md  cuda_linux.md  rocm_linux.md
python/pulsar_viz/: __init__.py  api.py  cli.py  config.py  env.py  video.py  viz.py
python/pulsar_viz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bench_smoke.py  cuda_h100_smoke.py  cuda_smoke.py  download_kaggle_dataset.py  e2e_smoke.py  merge_offline_manifests.py  ngp_refresh_loop.py  offline_binary_smoke.py  preprocess_kaggle_2v2.py  preprocess_smoke.py  rocm_amp_smoke.py  rocm_bf16_smoke.py  rocm_smoke.py  setup_python_dev.sh  train_binary_smoke.py  two_stage_smoke_common.py  wandb_stream.py
