[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsar-viz"
version = "0.1.0"
description = "Thin Python visualization and evaluation layer for Pulsar"
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy>=1.26",
  "wandb>=0.17,<1",
]

[project.optional-dependencies]
viz = [
  "rlgym[rl-rlviser]>=2.0.1,<3",
  "rocketsim>=2.2.0",
]
offline = [
  "kagglehub>=0.3.10",
  "subtr-actor-py>=0.3.1",
]

[project.scripts]
pulsar-viz = "pulsar_viz.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
